Fix footer overlap on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body::before {
 
 main {
   flex: 1;
+  padding-bottom: 6rem;
 }
 
 nav {
